S11P12D210-23 feat: 1. FilterFragment에 material timepicker 띄우는 함수 생성 2. Filter 라디오버튼 글자 크기 키움

--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -39,9 +39,10 @@
             android:id="@+id/rb_recent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:checked="true"
             android:text="@string/recent"
+            android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rb_popular"
             app:layout_constraintHorizontal_chainStyle="spread"
@@ -57,8 +58,9 @@
             android:id="@+id/rb_popular"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="@string/popular"
+            android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/rb_recent"
@@ -239,9 +241,10 @@
             android:id="@+id/rb_week"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:checked="true"
             android:text="@string/week"
+            android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rb_month"
             app:layout_constraintHorizontal_chainStyle="spread"
@@ -257,8 +260,9 @@
             android:id="@+id/rb_month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="@string/month"
+            android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rb_three_month"
             app:layout_constraintStart_toEndOf="@id/rb_week"
@@ -273,8 +277,9 @@
             android:id="@+id/rb_three_month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="@string/three_months"
+            android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rb_year"
             app:layout_constraintStart_toEndOf="@id/rb_month"
@@ -289,8 +294,9 @@
             android:id="@+id/rb_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="@string/year"
+            android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/rb_three_month"
@@ -335,11 +341,12 @@
 
         <RadioButton
             android:id="@+id/rb_one_to_one"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:checked="true"
             android:text="@string/one_to_one"
+            android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/rb_one_to_multi"
             app:layout_constraintHorizontal_chainStyle="spread"
@@ -353,10 +360,11 @@
 
         <RadioButton
             android:id="@+id/rb_one_to_multi"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="@string/one_to_multiple"
+            android:textSize="@dimen/text_medium_large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/rb_one_to_one"
