--- a/app/src/main/res/layout/fragment_register_notice.xml
+++ b/app/src/main/res/layout/fragment_register_notice.xml
@@ -22,7 +22,6 @@
                 android:hint="@string/write_info"
                 android:inputType="textMultiLine"
                 android:scrollHorizontally="false"
-                android:overScrollMode="always"
                 style="@style/LargeText"
                 android:padding="@dimen/padding_large"
                 android:gravity="top"
@@ -45,16 +44,14 @@
             <ImageView
                 android:id="@+id/iv_photo"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/padding_medium"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/sample"
-                android:visibility="gone"
+                android:src="@drawable/sample2"
                 app:layout_constraintTop_toBottomOf="@id/divider5"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintDimensionRatio="1:1" /> <!-- 가로 세로 비율 1:1 설정 -->
+                app:layout_constraintStart_toStartOf="parent" /> <!-- 가로 세로 비율 1:1 설정 -->
 
             <ImageView
                 android:id="@+id/iv_cancel2"
