--- a/app/src/main/res/layout/fragment_register_notice.xml
+++ b/app/src/main/res/layout/fragment_register_notice.xml
@@ -48,7 +48,7 @@
                 android:layout_margin="@dimen/padding_medium"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/sample2"
+                tools:src="@drawable/sample2"
                 app:layout_constraintTop_toBottomOf="@id/divider5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" /> <!-- 가로 세로 비율 1:1 설정 -->
