S11P12D210-23 feat: 1. 강사 상세 UI 완성 2. 강사의 강의 item list 완성

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="BoldMediumText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="commonText">
         <item name="android:textSize">17sp</item>
     </style>
