--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -57,7 +57,7 @@
         android:id="@+id/til_cn"
         style="@style/boxCornerRadiusStyle"
         app:layout_constraintBottom_toTopOf="@id/tv_pw"
-        app:layout_constraintEnd_toStartOf="@id/check"
+        app:layout_constraintEnd_toStartOf="@id/btn_check"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_cn">
 
@@ -70,7 +70,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/check"
+        android:id="@+id/btn_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/padding_extra_extra_large"
@@ -170,6 +170,7 @@
         android:clickable="true"
         android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
         android:focusable="true"
+        android:gravity="center"
         android:text="@string/is_teacher"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
