--- a/app/src/main/res/layout/fragment_join.xml
+++ b/app/src/main/res/layout/fragment_join.xml
@@ -56,6 +56,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_cn"
         style="@style/boxCornerRadiusStyle"
+        android:layout_marginEnd="@dimen/padding_medium"
         app:layout_constraintBottom_toTopOf="@id/tv_pw"
         app:layout_constraintEnd_toStartOf="@id/btn_check"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,9 +73,8 @@
     <Button
         android:id="@+id/btn_check"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/ti_height"
         android:layout_marginEnd="@dimen/padding_extra_extra_large"
-        android:height="@dimen/ti_height"
         android:text="@string/check"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/til_cn"
