--- a/app/src/main/res/layout/custom_chapter_view.xml
+++ b/app/src/main/res/layout/custom_chapter_view.xml
@@ -17,6 +17,18 @@
         android:textSize="@dimen/text_size_semi_large"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_deleteBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/padding_small"
+        android:background="@android:color/transparent"
+        android:padding="@dimen/text_medium"
+        android:text="@string/delete"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_chapter"
+        app:layout_constraintBottom_toBottomOf="@id/tv_chapter"/>
     <ImageView
             android:id="@+id/iv_video"
             android:layout_width="match_parent"
