--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,16 @@
         <item name="android:button">@null</item>
     </style>
 
+    <style name="RegisterButton">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">24dp</item>
+        <item name="android:button">@null</item>
+        <item name="android:background">@color/primary</item>
+    </style>
+
     <style name="boxCornerRadiusStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">@dimen/ti_height</item>
