--- a/app/src/main/res/layout/fragment_register_notice.xml
+++ b/app/src/main/res/layout/fragment_register_notice.xml
@@ -10,21 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/et_notice"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@null"
-        android:hint="@string/write_info"
-        android:inputType="textMultiLine"
-        style="@style/LargeText"
-        android:padding="@dimen/padding_large"
-        android:gravity="top"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/divider4"
-        />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/et_notice"
@@ -41,7 +29,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintHeight_default="spread"
-                android:minHeight="400dp"/> <!-- 최소 높이 설정 -->
+                android:minHeight="400dp" /> <!-- 최소 높이 설정 -->
 
             <View
                 android:id="@+id/divider5"
@@ -51,7 +39,7 @@
                 android:background="?android:attr/listDivider"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/et_notice"/>
+                app:layout_constraintTop_toBottomOf="@id/et_notice" />
 
             <ImageView
                 android:id="@+id/iv_photo"
@@ -72,11 +60,12 @@
                 android:src="@drawable/baseline_cancel_red"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/divider5"/>
+                app:layout_constraintTop_toBottomOf="@id/divider5" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
     <View
         android:id="@+id/divider4"
         android:layout_width="0dp"
@@ -95,8 +84,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/divider4"
-        >
+        app:layout_constraintTop_toTopOf="@id/divider4">
 
         <TextView
             android:id="@+id/tv_add_photo"
