--- a/app/src/main/res/drawable/calendar_selector.xml
+++ b/app/src/main/res/drawable/calendar_selector.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector android:exitFadeDuration="@android:integer/config_shortAnimTime" xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:state_checked="false">
-        <shape
-            android:shape="rectangle" >
-            <solid android:color="@color/primary"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/primary" />
+            <corners android:radius="4dp" />
         </shape>
     </item>
-    <item android:drawable="@android:color/transparent" />
 </selector>
