--- a/app/src/main/res/layout/list_item_live.xml
+++ b/app/src/main/res/layout/list_item_live.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
     android:padding="@dimen/padding_medium">
 
     <!-- 5-5 -->
@@ -33,8 +32,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_lecture_title"
