--- a/app/src/main/res/layout/list_item_mylist.xml
+++ b/app/src/main/res/layout/list_item_mylist.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
     android:padding="@dimen/padding_medium">
 
     <!-- 5-3 -->
@@ -48,7 +47,7 @@
     <View
         android:id="@+id/v_connect"
         android:layout_width="1dp"
-        android:layout_height="@dimen/padding_small"
+        android:layout_height="0dp"
         android:background="@color/gray_20"
         app:layout_constraintBottom_toTopOf="@id/cv_content"
         app:layout_constraintEnd_toEndOf="@id/iv_profile"
@@ -64,7 +63,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/v_connect"
+        app:layout_constraintTop_toBottomOf="@id/tv_date"
         app:strokeColor="@color/gray_20"
         app:strokeWidth="1dp">
 
@@ -72,7 +71,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
-            android:background="@color/white"
             android:padding="@dimen/padding_medium">
 
             <TextView
