--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorSurfaceContainer">@color/surface_container</item>
         <item name="colorSecondaryContainer">@color/second_primary</item>
+        <item name="android:windowBackground">@color/white</item> <!-- 기본 배경색을 흰색으로 설정 -->
     </style>
 
     <style name="Theme.YogaNavi" parent="Base.Theme.YogaNavi" />
