S11P12D210-18-3-5 feat: 글자 크기 디크립션으로 변경

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,6 +31,7 @@
     <dimen name="icon_extra_extra_large">300dp</dimen>
 
     <!-- TextSize -->
+    <dimen name="text_small">14sp</dimen>
     <dimen name="text_medium">16sp</dimen>
     <dimen name="text_medium_large">18sp</dimen>
     <dimen name="text_medium_large20">20sp</dimen>
