--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -72,7 +72,7 @@
         android:paddingStart="@dimen/padding_large"
         android:paddingBottom="@dimen/padding_large"
         android:text="@string/forgot_password"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_small"
         android:layout_marginTop="@dimen/padding_small"
         app:layout_constraintEnd_toEndOf="@id/btn_login"
         app:layout_constraintTop_toBottomOf="@id/btn_login" />
