--- a/app/src/main/res/layout/list_item_home.xml
+++ b/app/src/main/res/layout/list_item_home.xml
@@ -50,8 +50,10 @@
         android:background="@color/gray_20"
         app:layout_constraintBottom_toTopOf="@id/cv_content"
         app:layout_constraintEnd_toEndOf="@id/iv_profile"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/iv_profile"
-        app:layout_constraintTop_toBottomOf="@id/iv_profile" />
+        app:layout_constraintTop_toBottomOf="@id/iv_profile"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_content"
