S11P12D210-45 Feat: 비밀번호 수정 UI 레이어 로직 구현

--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -29,9 +29,10 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_id"
         style="@style/boxCornerRadiusStyle"
+        android:layout_marginEnd="@dimen/padding_medium"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@id/tv_cn"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_send"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_email">
 
@@ -42,6 +43,18 @@
             android:inputType="textEmailAddress"
             android:lines="1" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/btn_send"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/ti_height"
+        android:layout_marginEnd="@dimen/padding_extra_extra_large"
+        android:text="@string/send"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/til_id"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/til_id"
+        app:layout_constraintTop_toTopOf="@+id/til_id" />
 
     <TextView
         android:id="@+id/tv_cn"
@@ -56,8 +69,9 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_cn"
         style="@style/boxCornerRadiusStyle"
+        android:layout_marginEnd="@dimen/padding_medium"
         app:layout_constraintBottom_toTopOf="@id/tv_pw"
-        app:layout_constraintEnd_toStartOf="@id/check"
+        app:layout_constraintEnd_toStartOf="@id/btn_check"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_cn">
 
@@ -70,11 +84,11 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/check"
+        android:id="@+id/btn_check"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/ti_height"
         android:layout_marginEnd="@dimen/padding_extra_extra_large"
-        android:height="@dimen/ti_height"
+        android:enabled="false"
         android:text="@string/check"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/til_cn"
@@ -124,8 +138,7 @@
         style="@style/boxCornerRadiusStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_pw_again"
-        app:passwordToggleEnabled="true">
+        app:layout_constraintTop_toBottomOf="@id/tv_pw_again">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tie_pw_again"
@@ -143,6 +156,7 @@
         android:layout_marginEnd="@dimen/padding_extra_extra_large"
         android:layout_marginBottom="@dimen/padding_large"
         android:height="@dimen/ti_height"
+        android:enabled="false"
         android:text="@string/reset"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
